Cambio de fondo

--- a/index.html
+++ b/index.html
@@ -15,8 +15,7 @@
         body {
             min-height: 100vh;
             background: linear-gradient(rgba(0,0,0,0.6), rgba(0,0,0,0.6)),
-                        url('https://images.unsplash.com/photo-1542273917363-3b1817f69a2d?crop=entropy&cs=tinysrgb&fit=max&fm=jpg&ixid=MnwxfDB8MXxyYW5kb218MHx8Zm9yZXN0LGRhcmt8fHx8fHwxNjE2MjY0MjIw&ixlib=rb-1.2.1&q=80&utm_campaign=api-credit&utm_medium=referral&utm_source=unsplash_source&w=1080')
-                        no-repeat center center fixed;
+                        url('img/psicologia-para-empresas.jpg') no-repeat center center fixed;
             background-size: cover;
             display: flex;
             justify-content: center;
